k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudwatch-app
  labels:
    app: cloudwatch-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudwatch-app
  template:
    metadata:
      labels:
        app: cloudwatch-app
    spec:
      containers:
        - name: web
          image: 054037143289.dkr.ecr.ap-south-1.amazonaws.com/cloudwatch:latest  # Replace with your actual image
          ports:
            - containerPort: 5000
