k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudwatch-service
spec:
  selector:
    app: cloudwatch-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
